fix(sidebar): wrap(word-wrap) tag module correctly

--- a/assets/sass/_partial/_sidebar.scss
+++ b/assets/sass/_partial/_sidebar.scss
@@ -23,6 +23,9 @@
 .module-content {
     padding: 10px 10px 10px 10px;
     background: #fff;
+    .tags{
+        display: inline-block;
+    }
 }
 
 .search-input{
